# ai-sandbox

./: README.md
clustering-basics-poc/: Cargo.toml  README.md
clustering-basics-poc/src/: clustering.rs  embedding.rs  main.rs
clustering-objects-poc/: .gitignore  Cargo.toml  README.md
clustering-objects-poc/src/: analytics.rs  clustering.rs  data.rs  loan_contract.rs  main.rs  normalization.rs
clustering-visual-poc/: Cargo.toml  README.md
clustering-visual-poc/src/: clustering.rs  data.rs  main.rs  visualization.rs
deepseek-r1-basics/: README.md  poc_r1_vs_baseline.py
distillation-basic-poc/: README.md
distillation-basic-poc/presentation/: .~lock.distillation.odp#  README.md  distillation.odp
distillation-basic-poc/src/distillation/: config.py
python-distillation-poc/: .gitignore  README.md
python-distillation-poc/src/distillation/: config.py  device.py
rust-distillation/: .gitignore  Cargo.toml  README.md  export_teacher.py  train_teacher.py
rust-distillation/models/: teacher.pt
rust-distillation/src/: config.rs  main.rs
rust-distillation/src/data/: dataloader.rs  dataset.rs  mod.rs
rust-distillation/src/eval/: metrics.rs
rust-distillation/src/models/: mod.rs  student.rs  teacher.rs
rust-distillation/src/training/: eval.rs  loss.rs  mod.rs  trainer.rs
rust-distillation/src/utils/: device.rs
rust-multi-agent-poc/: .gitignore  Cargo.toml  README.md
rust-multi-agent-poc/src/: bus.rs  main.rs  message.rs
rust-multi-agent-poc/src/agents/: manager.rs  mod.rs  (+3 more)
ux-magic/: README.md
ux-magic/TimeSheet-cursor-projects/: README.md
(+9 files in other folders)
