[package]
name = "rust-distillation"
version = "0.1.0"
edition = "2024"

[dependencies]
tch = "0.15"                                        # tensors, autograd, GPU (via libtorch)
anyhow = "1.0"                                      # error handling
rand = "0.8"                                        # shuffling, sampling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"                                  # dataset formats
